<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Preguntados</string>
    <string name="SI_SABES_DE_SERIES_ADELANTE">Si sabes de series, !ADELANTE¡</string>
    <string name="secuencia_n_merica_de_la_serie_lost">Secuencia númerica de la serie Lost</string>

    <string name="siguiente">Siguiente</string>
    <string name="protagonistas_de_la_serie_bates_motel">Protagonistas de la serie Bates Motel</string>

    <string name="volver">volver</string>
    <string name="que_pokemon_tiene_menos_debilidades">Que pokemon tiene menos debilidades</string>
    <string name="que_pokemon_tiene_mas_debilidades">que_pokemon_tiene_mas_debilidades</string>
    <string name="hydreigon">hydreigon</string>
    <string name="charizard">charizard</string>
    <string name="umbreon">umbreon</string>
    <string name="articuno">articuno</string>
    <string name="qu_pok_mon_tiene_m_s_debilidades">¿Qué Pokémon tiene más debilidades?</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="si_sabes_de_series_adelante">SI SABES DE SERIES, ¡ADELANTE!</string>
    <string name="enunciadoPregunta4">¿Quiénes son estos personajes de la serie «CRÓNICAS VAMPÍRICAS?</string>
    <string name="matt_elena_niklaus">Matt, Elena, Niklaus</string>
    <string name="alaric_hayley_jeremy">Alaric, Hayley, Jeremy</string>
    <string name="stefan_katherine_damon">Stefan, Katherine, Damon</string>
    <string name="enzo_bonnie_y_damon">Enzo, Bonnie y Damon</string>

    <string name="_5_de_noviembre_1983">5 de noviembre 1983</string>
    <string name="_10_de_noviembre_1983">10 de noviembre 1983</string>
    <string name="_6_de_noviembre_1983">6 de noviembre 1983</string>
    <string name="_8_de_noviembre_1983">8 de noviembre 1983</string>
    <string name="qu_d_a_desaparece_will_byers_en_la_serie_de_stranger_things">¿Qué día desaparece Will Byers en la serie de «STRANGER THINGS»?</string>
    <string name="mandy_y_bob_motel" tools:ignore="DuplicateDefinition">Mandy y Bob Motel</string>
    <string name="alice_y_alex_romero" tools:ignore="DuplicateDefinition">Alice y Alex Romero</string>
    <string name="wendy_y_billy_hudson" tools:ignore="DuplicateDefinition">Wendy y Billy Hudson</string>
    <string name="norma_y_norman_bates" tools:ignore="DuplicateDefinition">Norma y Norman Bates</string>
    <string name="c_mo_se_llaman_los_protagonistas_de_la_serie_bates_motel">¿Cómo se llaman los protagonistas de la serie «BATES MOTEL»?</string>
    <string name="_4_8_15_16_23_42" tools:ignore="DuplicateDefinition">4 8 15 16 23 42</string>
    <string name="_4_8_15_16_23_32" tools:ignore="DuplicateDefinition">4 8 15 16 23 32</string>
    <string name="_4_8_15_18_37_56" tools:ignore="DuplicateDefinition">4 8 15 18 37 56</string>
    <string name="_4_8_10_23_36_56" tools:ignore="DuplicateDefinition">4 8 10 23 36 56</string>
    <string name="cu_l_es_la_famosa_secuencia_de_n_meros_que_aparece_en_la_serie_de_perdidos">¿Cuál es la famosa secuencia de números que aparece en la serie de «PERDIDOS»?</string>
    <string name="bates_motel">¿Cómo se llaman los protagonistas de la serie «BATES MOTEL»?</string>
</resources>