<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Pregunta3">

    <TextView
        android:id="@+id/pregunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/protagonistas_de_la_serie_bates_motel"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/respuesta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/norma_y_norman_bates"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/respuesta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wendy_y_billy_hudson"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="321dp" />

    <Button
        android:id="@+id/respuesta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alice_y_alex_romero"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/respuesta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandy_y_bob_motel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-32dp"
        tools:layout_editor_absoluteY="491dp" />

    <Button
        android:id="@+id/siguientePregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="571dp" />

    <Button
        android:id="@+id/volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="571dp" />
</LinearLayout>