<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta5">

    <TextView
        android:id="@+id/pregunta5"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_x="54dp"
        android:layout_y="99dp"
        android:text="¿Qué Pokémon tiene más debilidades?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/puntuacionFinal"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="56dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <ImageButton
        android:id="@+id/respuesta1"
        android:layout_width="181dp"
        android:layout_height="116dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="68dp"
        android:layout_x="28dp"
        android:layout_y="146dp"
        android:contentDescription="@string/hydreigon"
        app:layout_constraintBottom_toTopOf="@+id/respuesta3"
        app:layout_constraintEnd_toStartOf="@+id/respuesta2"
        app:srcCompat="@drawable/hydreigon"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/respuesta2"
        android:layout_width="173dp"
        android:layout_height="118dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginBottom="64dp"
        android:layout_x="215dp"
        android:layout_y="144dp"
        android:contentDescription="@string/charizard"
        app:layout_constraintBottom_toTopOf="@+id/respuesta4"
        app:srcCompat="@drawable/charizard"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="222dp" />

    <ImageButton
        android:id="@+id/respuesta3"
        android:layout_width="184dp"
        android:layout_height="121dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="104dp"
        android:layout_x="26dp"
        android:layout_y="340dp"
        android:contentDescription="@string/umbreon"
        app:layout_constraintBottom_toTopOf="@+id/siguientePregunta"
        app:layout_constraintEnd_toStartOf="@+id/respuesta4"
        app:srcCompat="@drawable/umbreon"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/respuesta4"
        android:layout_width="182dp"
        android:layout_height="126dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginBottom="100dp"
        android:layout_x="209dp"
        android:layout_y="339dp"
        android:contentDescription="@string/articuno"
        app:layout_constraintBottom_toTopOf="@+id/volver"
        app:srcCompat="@drawable/articuno"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp" />

    <Button
        android:id="@+id/siguientePregunta"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_x="33dp"
        android:layout_y="536dp"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="38dp" />

    <Button
        android:id="@+id/volver"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_x="217dp"
        android:layout_y="535dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="239dp" />

</android.support.constraint.ConstraintLayout>