<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_corn_wallpaper"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Pregunta1">


    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="332dp"
        android:layout_height="103dp"
        android:layout_x="0dp"
        android:layout_y="187dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="¿Cuál es la famosa secuencia de números que ha de ser introducida en el ordenador del búnker en la serie de «PERDIDOS»?"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/respuesta1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp" />


    <TextView
        android:id="@+id/puntuacionFinal"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_x="250dp"
        android:layout_y="103dp"
        android:background="#FFFFFF"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />


    <Button
        android:id="@+id/respuesta1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="303dp"
        android:background="@drawable/buttonshape"
        android:text="@string/_4_8_10_23_36_56"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/respuesta2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <Button
        android:id="@+id/respuesta2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="362dp"
        android:background="@drawable/buttonshape"
        android:text="@string/_4_8_15_18_37_56"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/respuesta3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <Button
        android:id="@+id/respuesta3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="418dp"
        android:background="@drawable/buttonshape"
        android:text="@string/_4_8_15_16_23_32"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/respuesta4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <Button
        android:id="@+id/respuesta4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="479dp"
        android:background="@drawable/buttonshape"
        android:text="@string/_4_8_15_16_23_42"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/siguientePregunta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp" />

    <Button
        android:id="@+id/siguientePregunta"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="567dp"
        android:background="#000000"
        android:text="@string/siguiente"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/volver"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/volver"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="567dp"
        android:background="#000000"
        android:text="@string/volver"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp" />


</android.support.constraint.ConstraintLayout>